# gotchamark

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.local.json
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  contrast.rs  detection.rs  lib.rs  main.rs  registry.rs  watermark.rs
