[package]
name = "gotchamark"
version = "0.1.5"
description = "Gotcha!Mark — Watermark your PDFs to trace leaks"
authors = ["Luca Sambucci <sambucci.com>", "Claude Opus 4.6 <noreply@anthropic.com>"]
edition = "2021"

[lib]
name = "gotchamark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF manipulation
lopdf = "0.34"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Platform data dirs
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Hashing
sha2 = "0.10"
